@@ -1,0 +1,3 @@
+Makefile
+Makefile.in
+perdition.spec
